src/objects/Theatre__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Theatres</relationshipLabel>
        <relationshipName>Theatres</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_D_T__c</fullName>
        <label>Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Theatre</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Description__c</columns>
        <columns>Processed_D_T__c</columns>
        <columns>Allow_Deletion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Theatres</label>
    </listViews>
    <nameField>
        <label>Theatre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Theatres</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>